src/test/deca/syntax/invalid/test_synt15.deca
//Resultat:
//      Erreur syntaxique : } manquant ligne 4
class A{
int a;
float a;
